# vocab

./: README.md  Taskfile.yml  pyproject.toml
app/: gemini.py  main.py  schemas.py  units.py  vocab.py
data/units/: geben.json  gehen.json  machen.json  stehen.json  verben-mit-an.json
plan/: bugs.md  features.md
static/: cli-suites.js  common.css  create-logic.js  create-logic.test.js  fragment-highlight-editor.js  fragment-highlight-editor.test.js  index.html  practise-card.js  practise-card.test.js  practise-logic.js  practise-logic.test.js  practise.html  run-tests.js  test-harness.js  test-suites.js  unit-test.html  utils.js  utils.test.js
static/test/: cli-suites.js  run-tests.js  test-suites.js
